<resources>
    <string name="app_name">Mylogin</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="input_password">input password</string>
    <string name="input_email">input Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="do_not_have_an_account">do not have an account?</string>
    <string name="linked_in">Linked in</string>
</resources>